# layerwise

./: .gitignore  README.md  TODO.md  eval_average_density_profile.ipynb  eval_crown_flank_dataset.ipynb  eval_pst.ipynb  eval_weac_over_layers.ipynb  plotly_snow_profile.py  plotting_trials.ipynb  pyproject.toml  test_plotting.ipynb  test_snowpylot_parser.ipynb
notebooks/: weac_over_avg_density_profile.ipynb  weac_over_crown_flank_dataset.ipynb  weac_over_layers.csv  weac_over_layers.ipynb
scripts/: anrissprofile_ids.csv  ect_ids.txt  plot_cdf_comparison.py  profile_etc_rb_yannik.ipynb  rb_ids.txt  snowprofiles_yannik.ipynb  weac_over_slf_anrissprofile.ipynb  weac_over_slf_ect.ipynb  weac_over_slf_ect.py  weac_over_slf_rb.ipynb  weac_over_slf_rb.py
scripts/CDFs/: cdf_fit_params.txt
scripts/faulty_anrissprofile/: 2c59aaf0-d59e-4749-91ab-4e7b9af16777.caaml.xml  43d3269e-5c82-4d61-b0c3-45f77c0d6010.caaml.xml  a15ec0b4-ab72-4eb3-b064-e08c204b22dd.caaml.xml
src/layerwise/analysis/: distributions.py  metrics.py  profile_utils.py
src/layerwise/plotting/: plotly_snow_profile.py
src/layerwise/streamlit/st_user/: app.py
src/layerwise/streamlit/streamlit_app/: 1_Slab_Definition.py
src/layerwise/streamlit/streamlit_app/pages/: 2_Scenario_Definition.py  3_Analysis.py
st_user/: app.py
streamlit_app/: 1_Slab_Definition.py
streamlit_app/pages/: 2_Scenario_Definition.py  3_Analysis.py
