[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layerwise"
version = "0.1.0"
description = "A Python project for layerwise operations and analysis"
readme = "README.md"
authors = [{ name = "Yannik Werner", email = "yannik.werner@yahoo.de" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "numpy",
    "scipy",
    "pydantic",
    "streamlit",
    "plotly",
    "tqdm",
    "snowpylot",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/2phi/layerwise"
Repository = "https://github.com/2phi/layerwise"
Issues = "https://github.com/2phi/layerwise/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["layerwise*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
