[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "layerwise"
version = "0.1.0"
description = "A Python project for layerwise operations and analysis"
readme = "README.md"
authors = [{ name = "Yannik Werner", email = "yannik.werner@yahoo.de" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.12"
dependencies = [
    "weac>=3.1.0",
    "numpy<2.4.0",    # weac incompatible with numpy 2.4+ / scipy 1.16.3+
    "scipy<1.16.3",
    "ipykernel",
    "ipywidgets",
    "nbformat",
    "tqdm",
    "streamlit",
    "plotly",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/2phi/layerwise"
Repository = "https://github.com/2phi/layerwise"
Issues = "https://github.com/2phi/layerwise/issues"


[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
layerwise = { path = ".", editable = true }
